Advanced in processing logic, added tests